--- a/Qin2014_cirrhosis/models/Qin2014_ta-gRRF.ipynb
+++ b/Qin2014_cirrhosis/models/Qin2014_ta-gRRF.ipynb
@@ -1304,16 +1304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-19T10:45:40.960300Z",
-     "start_time": "2021-11-19T10:45:19.391Z"
+     "end_time": "2021-11-24T14:39:55.301187Z",
+     "start_time": "2021-11-24T14:39:25.365Z"
     }
    },
    "outputs": [],
    "source": [
-    "qsave(res, file = '../tmp/ta-gRRF.qs')"
+    "saveRDS(res, '../tmp/ta-gRRF.RDS')"
    ]
   },
   {
@@ -1334,7 +1334,7 @@
    },
    "outputs": [],
    "source": [
-    "res <- qread('../tmp/ta-gRRF.qs')"
+    "res <- readRDS('../tmp/ta-gRRF.RDS')"
    ]
   },
   {
