update APs replicates for submission

--- a/artificial_phenotypes/repetitions/evaluation_paramaters/Replicate1_B10-B100.ipynb
+++ b/artificial_phenotypes/repetitions/evaluation_paramaters/Replicate1_B10-B100.ipynb
@@ -19,8 +19,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:18:15.610187Z",
-     "start_time": "2021-11-23T18:18:10.522Z"
+     "end_time": "2021-12-17T13:16:13.977989Z",
+     "start_time": "2021-12-17T13:16:08.572Z"
     }
    },
    "outputs": [
@@ -145,6 +145,10 @@
       "\n",
       "    margin\n",
       "\n",
+      "\n",
+      "* Option 'clustermq.scheduler' not set, defaulting to ‘SGE’\n",
+      "\n",
+      "--- see: https://mschubert.github.io/clustermq/articles/userguide.html#configuration\n",
       "\n"
      ]
     }
@@ -171,8 +175,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:18:15.684645Z",
-     "start_time": "2021-11-23T18:18:11.075Z"
+     "end_time": "2021-12-17T13:16:14.056598Z",
+     "start_time": "2021-12-17T13:16:08.574Z"
     }
    },
    "outputs": [
@@ -194,8 +198,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:18:26.896263Z",
-     "start_time": "2021-11-23T18:18:26.526Z"
+     "end_time": "2021-12-17T13:16:14.109523Z",
+     "start_time": "2021-12-17T13:16:08.575Z"
     }
    },
    "outputs": [
@@ -227,8 +231,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:18:29.165884Z",
-     "start_time": "2021-11-23T18:18:28.775Z"
+     "end_time": "2021-12-17T13:16:14.186604Z",
+     "start_time": "2021-12-17T13:16:08.577Z"
     }
    },
    "outputs": [
@@ -314,11 +318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-24T08:10:54.660821Z",
-     "start_time": "2021-11-24T08:10:51.785Z"
+     "end_time": "2021-12-17T13:16:14.221989Z",
+     "start_time": "2021-12-17T13:16:08.579Z"
     }
    },
    "outputs": [],
@@ -339,11 +343,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-01T15:43:26.244382Z",
-     "start_time": "2021-04-01T15:43:22.691Z"
+     "end_time": "2021-12-17T13:16:14.238066Z",
+     "start_time": "2021-12-17T13:16:08.581Z"
     }
    },
    "outputs": [],
@@ -356,8 +360,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:19:27.867017Z",
-     "start_time": "2021-11-23T18:19:27.778Z"
+     "end_time": "2021-12-17T13:16:14.291060Z",
+     "start_time": "2021-12-17T13:16:08.583Z"
     }
    },
    "outputs": [],
@@ -372,8 +376,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:19:30.988612Z",
-     "start_time": "2021-11-23T18:19:30.928Z"
+     "end_time": "2021-12-17T13:16:14.319769Z",
+     "start_time": "2021-12-17T13:16:08.585Z"
     }
    },
    "outputs": [],
@@ -391,8 +395,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:19:33.447459Z",
-     "start_time": "2021-11-23T18:19:33.315Z"
+     "end_time": "2021-12-17T13:16:14.426149Z",
+     "start_time": "2021-12-17T13:16:08.587Z"
     }
    },
    "outputs": [],
@@ -406,8 +410,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:19:37.009333Z",
-     "start_time": "2021-11-23T18:19:34.575Z"
+     "end_time": "2021-12-17T13:16:15.921705Z",
+     "start_time": "2021-12-17T13:16:08.589Z"
     }
    },
    "outputs": [
@@ -437,9 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# B=100 "
    ]
@@ -447,8 +449,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## get"
@@ -571,10 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## aggregate b=100"
    ]
@@ -584,14 +582,13 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:19:49.395709Z",
-     "start_time": "2021-11-23T18:19:49.348Z"
-    },
-    "hidden": true
+     "end_time": "2021-12-17T13:16:19.313797Z",
+     "start_time": "2021-12-17T13:16:18.776Z"
+    }
    },
    "outputs": [],
    "source": [
-    "#fnames <- list.files('/ebio/abt3_projects/temp_data/aruaud/MtgSimu50/p005_B100-10same_1/', full.names = TRUE, recursive = TRUE)"
+    "fnames <- list.files('/ebio/abt3_projects/temp_data/aruaud/MtgSimu50/p005_B100-10same_1/', full.names = TRUE, recursive = TRUE)"
    ]
   },
   {
@@ -599,10 +596,9 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:21:11.489535Z",
-     "start_time": "2021-11-23T18:19:49.947Z"
-    },
-    "hidden": true
+     "end_time": "2021-12-17T13:17:39.911696Z",
+     "start_time": "2021-12-17T13:16:19.046Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -616,9 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Results b=10"
    ]
@@ -628,10 +622,9 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:21:20.614621Z",
-     "start_time": "2021-11-23T18:21:20.529Z"
-    },
-    "hidden": true
+     "end_time": "2021-12-17T13:17:39.935573Z",
+     "start_time": "2021-12-17T13:16:22.556Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -652,11 +645,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:21:33.542615Z",
-     "start_time": "2021-11-23T18:21:26.887Z"
+     "end_time": "2021-12-17T13:17:45.157610Z",
+     "start_time": "2021-12-17T13:16:23.201Z"
     }
    },
    "outputs": [],
@@ -671,41 +664,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-17T13:17:47.771671Z",
+     "start_time": "2021-12-17T13:16:24.822Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "b10_curves <- parLapply(cl = cluster, res_b10, getPR_singleB, alpha = 5, pi_thr = 0.7, related_taxa=related_taxa\n",
+    "                     , all = (525^2-525)/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-17T13:20:10.238087Z",
+     "start_time": "2021-12-17T13:16:25.167Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "b100_curves <- parLapply(cl = cluster, res_b100, getPR_singleB, alpha = 5, pi_thr = 0.7, related_taxa=related_taxa\n",
+    "                     , all = (525^2-525)/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:21:37.182931Z",
-     "start_time": "2021-11-23T18:21:27.052Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "b10_curves <- parLapply(cl = cluster, res_b10, getPR_singleB, alpha = 10, pi_thr = 0.7, related_taxa=related_taxa\n",
-    "                     , all = (525^2-525)/2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-11-23T18:24:15.450582Z",
-     "start_time": "2021-11-23T18:21:27.216Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "b100_curves <- parLapply(cl = cluster, res_b100, getPR_singleB, alpha = 10, pi_thr = 0.7, related_taxa=related_taxa\n",
-    "                     , all = (525^2-525)/2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-11-23T18:24:15.491925Z",
-     "start_time": "2021-11-23T18:21:29.347Z"
+     "end_time": "2021-12-17T13:20:10.260455Z",
+     "start_time": "2021-12-17T13:16:25.618Z"
     }
    },
    "outputs": [],
@@ -715,11 +709,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:24:15.560903Z",
-     "start_time": "2021-11-23T18:21:29.572Z"
+     "end_time": "2021-12-17T13:20:10.294871Z",
+     "start_time": "2021-12-17T13:16:25.961Z"
     }
    },
    "outputs": [],
@@ -730,11 +724,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:24:15.608138Z",
-     "start_time": "2021-11-23T18:21:29.780Z"
+     "end_time": "2021-12-17T13:20:10.329447Z",
+     "start_time": "2021-12-17T13:16:26.472Z"
     }
    },
    "outputs": [],
@@ -745,11 +739,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:24:15.660497Z",
-     "start_time": "2021-11-23T18:21:29.992Z"
+     "end_time": "2021-12-17T13:20:10.384129Z",
+     "start_time": "2021-12-17T13:16:29.637Z"
     }
    },
    "outputs": [
@@ -781,12 +775,12 @@
        "\t<tr><th></th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>837</th><td> 97</td><td>7</td><td> 87</td><td>137454</td><td>2</td><td>15</td><td>100</td><td>9</td><td>10</td></tr>\n",
-       "\t<tr><th scope=row>838</th><td>108</td><td>7</td><td> 91</td><td>137450</td><td>2</td><td> 9</td><td>100</td><td>9</td><td>10</td></tr>\n",
-       "\t<tr><th scope=row>839</th><td> 98</td><td>7</td><td> 88</td><td>137453</td><td>2</td><td>13</td><td>100</td><td>9</td><td>10</td></tr>\n",
-       "\t<tr><th scope=row>840</th><td>161</td><td>9</td><td> 98</td><td>137443</td><td>0</td><td> 2</td><td>100</td><td>9</td><td>10</td></tr>\n",
-       "\t<tr><th scope=row>841</th><td>201</td><td>9</td><td>101</td><td>137440</td><td>0</td><td> 1</td><td>100</td><td>9</td><td>10</td></tr>\n",
-       "\t<tr><th scope=row>842</th><td>141</td><td>9</td><td> 97</td><td>137444</td><td>0</td><td> 3</td><td>100</td><td>9</td><td>10</td></tr>\n",
+       "\t<tr><th scope=row>667</th><td> 31</td><td>9</td><td>19</td><td>137522</td><td>0</td><td>76</td><td>100</td><td>9</td><td>10</td></tr>\n",
+       "\t<tr><th scope=row>668</th><td>112</td><td>9</td><td>66</td><td>137475</td><td>0</td><td>32</td><td>100</td><td>9</td><td>10</td></tr>\n",
+       "\t<tr><th scope=row>669</th><td> 50</td><td>9</td><td>34</td><td>137507</td><td>0</td><td>49</td><td>100</td><td>9</td><td>10</td></tr>\n",
+       "\t<tr><th scope=row>670</th><td> 35</td><td>9</td><td>23</td><td>137518</td><td>0</td><td>63</td><td>100</td><td>9</td><td>10</td></tr>\n",
+       "\t<tr><th scope=row>671</th><td> 43</td><td>9</td><td>29</td><td>137512</td><td>0</td><td>53</td><td>100</td><td>9</td><td>10</td></tr>\n",
+       "\t<tr><th scope=row>672</th><td> 30</td><td>9</td><td>18</td><td>137523</td><td>0</td><td>77</td><td>100</td><td>9</td><td>10</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -796,12 +790,12 @@
        "  & n\\_edges & tp & fp & tn & fn & inN & B & K & rep\\\\\n",
        "  & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <int> & <int> & <int>\\\\\n",
        "\\hline\n",
-       "\t837 &  97 & 7 &  87 & 137454 & 2 & 15 & 100 & 9 & 10\\\\\n",
-       "\t838 & 108 & 7 &  91 & 137450 & 2 &  9 & 100 & 9 & 10\\\\\n",
-       "\t839 &  98 & 7 &  88 & 137453 & 2 & 13 & 100 & 9 & 10\\\\\n",
-       "\t840 & 161 & 9 &  98 & 137443 & 0 &  2 & 100 & 9 & 10\\\\\n",
-       "\t841 & 201 & 9 & 101 & 137440 & 0 &  1 & 100 & 9 & 10\\\\\n",
-       "\t842 & 141 & 9 &  97 & 137444 & 0 &  3 & 100 & 9 & 10\\\\\n",
+       "\t667 &  31 & 9 & 19 & 137522 & 0 & 76 & 100 & 9 & 10\\\\\n",
+       "\t668 & 112 & 9 & 66 & 137475 & 0 & 32 & 100 & 9 & 10\\\\\n",
+       "\t669 &  50 & 9 & 34 & 137507 & 0 & 49 & 100 & 9 & 10\\\\\n",
+       "\t670 &  35 & 9 & 23 & 137518 & 0 & 63 & 100 & 9 & 10\\\\\n",
+       "\t671 &  43 & 9 & 29 & 137512 & 0 & 53 & 100 & 9 & 10\\\\\n",
+       "\t672 &  30 & 9 & 18 & 137523 & 0 & 77 & 100 & 9 & 10\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -810,22 +804,22 @@
        "\n",
        "| <!--/--> | n_edges &lt;dbl&gt; | tp &lt;dbl&gt; | fp &lt;dbl&gt; | tn &lt;dbl&gt; | fn &lt;dbl&gt; | inN &lt;dbl&gt; | B &lt;int&gt; | K &lt;int&gt; | rep &lt;int&gt; |\n",
        "|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 837 |  97 | 7 |  87 | 137454 | 2 | 15 | 100 | 9 | 10 |\n",
-       "| 838 | 108 | 7 |  91 | 137450 | 2 |  9 | 100 | 9 | 10 |\n",
-       "| 839 |  98 | 7 |  88 | 137453 | 2 | 13 | 100 | 9 | 10 |\n",
-       "| 840 | 161 | 9 |  98 | 137443 | 0 |  2 | 100 | 9 | 10 |\n",
-       "| 841 | 201 | 9 | 101 | 137440 | 0 |  1 | 100 | 9 | 10 |\n",
-       "| 842 | 141 | 9 |  97 | 137444 | 0 |  3 | 100 | 9 | 10 |\n",
+       "| 667 |  31 | 9 | 19 | 137522 | 0 | 76 | 100 | 9 | 10 |\n",
+       "| 668 | 112 | 9 | 66 | 137475 | 0 | 32 | 100 | 9 | 10 |\n",
+       "| 669 |  50 | 9 | 34 | 137507 | 0 | 49 | 100 | 9 | 10 |\n",
+       "| 670 |  35 | 9 | 23 | 137518 | 0 | 63 | 100 | 9 | 10 |\n",
+       "| 671 |  43 | 9 | 29 | 137512 | 0 | 53 | 100 | 9 | 10 |\n",
+       "| 672 |  30 | 9 | 18 | 137523 | 0 | 77 | 100 | 9 | 10 |\n",
        "\n"
       ],
       "text/plain": [
-       "    n_edges tp fp  tn     fn inN B   K rep\n",
-       "837  97     7   87 137454 2  15  100 9 10 \n",
-       "838 108     7   91 137450 2   9  100 9 10 \n",
-       "839  98     7   88 137453 2  13  100 9 10 \n",
-       "840 161     9   98 137443 0   2  100 9 10 \n",
-       "841 201     9  101 137440 0   1  100 9 10 \n",
-       "842 141     9   97 137444 0   3  100 9 10 "
+       "    n_edges tp fp tn     fn inN B   K rep\n",
+       "667  31     9  19 137522 0  76  100 9 10 \n",
+       "668 112     9  66 137475 0  32  100 9 10 \n",
+       "669  50     9  34 137507 0  49  100 9 10 \n",
+       "670  35     9  23 137518 0  63  100 9 10 \n",
+       "671  43     9  29 137512 0  53  100 9 10 \n",
+       "672  30     9  18 137523 0  77  100 9 10 "
       ]
      },
      "metadata": {},
@@ -839,11 +833,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:24:15.684953Z",
-     "start_time": "2021-11-23T18:21:32.497Z"
+     "end_time": "2021-12-17T13:20:10.408805Z",
+     "start_time": "2021-12-17T13:16:29.861Z"
     }
    },
    "outputs": [],
@@ -854,11 +848,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:24:15.774306Z",
-     "start_time": "2021-11-23T18:21:32.675Z"
+     "end_time": "2021-12-17T13:20:10.532846Z",
+     "start_time": "2021-12-17T13:16:30.042Z"
     }
    },
    "outputs": [],
@@ -875,11 +869,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:24:15.904883Z",
-     "start_time": "2021-11-23T18:21:45.261Z"
+     "end_time": "2021-12-17T13:20:10.649989Z",
+     "start_time": "2021-12-17T13:16:32.621Z"
     }
    },
    "outputs": [],
@@ -889,11 +883,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:24:16.318052Z",
-     "start_time": "2021-11-23T18:21:45.486Z"
+     "end_time": "2021-12-17T13:20:11.045259Z",
+     "start_time": "2021-12-17T13:16:32.816Z"
     }
    },
    "outputs": [],
@@ -913,11 +907,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:24:16.341873Z",
-     "start_time": "2021-11-23T18:21:53.270Z"
+     "end_time": "2021-12-17T13:20:11.067549Z",
+     "start_time": "2021-12-17T13:16:35.036Z"
     }
    },
    "outputs": [],
@@ -928,11 +922,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:24:16.364784Z",
-     "start_time": "2021-11-23T18:21:54.516Z"
+     "end_time": "2021-12-17T13:20:11.088209Z",
+     "start_time": "2021-12-17T13:16:35.350Z"
     }
    },
    "outputs": [],
@@ -942,11 +936,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:24:33.112005Z",
-     "start_time": "2021-11-23T18:24:32.846Z"
+     "end_time": "2021-12-17T13:20:11.119151Z",
+     "start_time": "2021-12-17T13:16:40.494Z"
     }
    },
    "outputs": [],
@@ -956,11 +950,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:24:33.347893Z",
-     "start_time": "2021-11-23T18:24:33.236Z"
+     "end_time": "2021-12-17T13:20:11.184186Z",
+     "start_time": "2021-12-17T13:16:40.945Z"
     }
    },
    "outputs": [],
@@ -985,11 +979,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-23T18:24:34.209527Z",
-     "start_time": "2021-11-23T18:24:34.105Z"
+     "end_time": "2021-12-17T13:20:11.246656Z",
+     "start_time": "2021-12-17T13:16:42.190Z"
     }
    },
    "outputs": [],
